2015-12-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (valgrind_cmd): Use --leak-check=full.
	* run-backtrace-demangle.sh: Disable valgrind.
	* run-stack-demangled-test.sh: Likewise.
	* run-stack-d-test.sh: Likewise.
	* run-stack-i-test.sh: Likewise.

2015-12-01  Mark Wielaard  <mjw@redhat.com>

	* test-flag-nobits.c (main): Call elf_end.
	* rerequest_tag.c (main): Call dwarf_end.
	* funcscopes.c (handle_function): Free scopes.
	* dwarf-getstring.c (main): Call dwarf_end.
	* allregs.c (main): Free state.info.
	* alldts.c (main): Free dyn.
	* addrcfi.c (handle_address): Free stuff.frame between handle_cfi
	calls.
	* addrscopes.c (handle_address): Free scopes.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am [BUILD_STATIC] (libdw): Add -lz.
	[BUILD_STATIC] (libelf): Likewise.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (dwfl_proc_attach_LDFLAGS): Add AM_LDFLAGS.

2015-10-09  Josh Stone  <jistone@redhat.com>

	* lfs-symbols: New list of LFS-related symbols from lintian.
	* testfile-nolfs.bz2: New test binary for sanity checking.
	* run-lfs-symbols.sh: New test.
	* Makefile.am (TESTS): Add run-lfs-symbols.sh.
	(EXTRA_DIST): Add lfs-symbols, testfile-nolfs.bz2, and
	run-lfs-symbols.sh.
	* alldts.c (main): Replace open64 with open.
	* dwarf-getstring.c (main): Likewise.
	* arls.c: Include config.h.
	* ecp.c: Likewise.
	* rdwrmmap.c: Likewise.
	* test-elf_cntl_gelf_getshdr.c: Likewise.
	* test-flag-nobits.c: Include config.h.
	(main): Replace open64 with open.

2015-10-09  Mark Wielaard  <mjw@redhat.com>

	* elfshphehdr.c (check): Rename argument from check to statement.
	(check_elf): Likewise.

2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (backtrace-child-biarch): Add AM_V_CC silencer.

2015-10-02  Mark Wielaard  <mjw@redhat.com>

	* elfstrmerge.c: New check program.
	* run-strip-strmerge.sh: New test.
	* Makefile.am (check_PROGRAMS): Add elfstrmerge.
	(EXTRA_DIST): Add run-strip-strmerge.sh