@@ -1,3 +1,10 @@
+2015-12-31  Mark Wielaard  <mjw@redhat.com>
+
+	* elfstrmerge.c (main): Warn about STT_SECTION symbol for shstrhndx.
+	* run-elfstrmerge-test.sh: New test.
+	* Makefile.am (TESTS): Add run-elfstrmerge-test.sh
+	(EXTRA_DIST): Likewise.
+
 2015-12-02  Mark Wielaard  <mjw@redhat.com>
 
 	* Makefile.am (valgrind_cmd): Use --leak-check=full.
